# blys-task

./: .gitignore  README.md  REASONING.md
.github/workflows/: ci-pr.yml  github-actions.yml  infra-docs.yml  infra.yaml
blyss-app/: .pre-commit-config.yaml  .releaserc  main.py  pyproject.toml
blyss-app/.github/workflows/: ci-pr.yml  github-actions.yml
blyss-app/docker/: Dockerfile  Dockerfile.prod  docker-compose.prod.yaml  docker-compose.yaml
blyss-app/scripts/: check-commit-msg.sh
terraform/: README.md
terraform/live/prod/: .terraform.lock.hcl  README.md  alb.tf  cloudmap.tf  cloudwatch.tf  data.tf  ecr.tf  ecs.tf  iam.tf  locals.tf  outputs.tf  providers.tf  secrets.tf  sg.tf  terraform.tfvars  variables.tf  vpc.tf
terraform/modules/aws/acm/: main.tf
terraform/modules/aws/alb/: main.tf  variables.tf
terraform/modules/aws/cloudmap/: main.tf  outputs.tf  variables.tf
terraform/modules/aws/cloudwatch/: variables.tf
terraform/modules/aws/ecr/: main.tf
terraform/modules/aws/ecs/: asg.tf  capacity_providers.tf  locals.tf  main.tf  outputs.tf  step_scaling.tf  variables.tf  versions.tf
terraform/modules/aws/iam/: locals.tf  main.tf  outputs.tf  role.tf  variables.tf
terraform/modules/aws/secrets_manager/: main.tf  outputs.tf  variables.tf
terraform/modules/aws/sg/: main.tf  outputs.tf  variable.tf
terraform/modules/aws/sqs/: main.tf  outputs.tf  variables.tf
terraform/modules/aws/ssm/: main.tf  outputs.tf
terraform/modules/aws/vpc/: endpoints.tf  main.tf  variables.tf
