[project]
name = "blyss-app"
version = "0.1.0"
description = "Simple FastAPI hello world app"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pre-commit",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
